syntax = "proto3";

package post;
option java_multiple_files=true;
option java_package = "com.service.post";
option java_outer_classname = "PostProtobuf";

service PostService{
  rpc CreateTopic(CreateTopicRequest) returns (CreatedResponse);

  rpc GetAllTopicsAdmin(GetAllRequest) returns (TopicsAdminResponse);

  rpc UpdateTopic(UpdateTopicRequest) returns (UpdatedResponse);

  rpc DeleteTopic(DeleteOneRequest) returns (DeletedResponse);

  rpc DeleteTopics(DeleteManyRequest) returns (DeletedResponse);

  rpc PermanentlyDeleteTopic(PermanentlyDeleteOneRequest) returns (DeletedResponse);

  rpc PermanentlyDeleteTopics(PermanentlyDeleteManyRequest) returns (DeletedResponse);

  rpc RestoreTopic(RestoreOneRequest) returns (RestoredResponse);

  rpc RestoreTopics(RestoreManyRequest) returns (RestoredResponse);

  rpc CreatePost(CreatePostRequest) returns (CreatedResponse);

  rpc GetDeletedTopics(GetAllRequest) returns (TopicsAdminResponse);

  rpc GetAllTopics(GetAllRequest) returns (TopicsResponse);

  rpc GetAllPostsAdmin(GetAllPostsAdminRequest) returns (PostsAdminResponse);

  rpc GetPostById(GetOneRequest) returns (PostAdminDetailsResponse);

  rpc UpdatePost(UpdatePostRequest) returns (UpdatedResponse);

  rpc DeletePost(DeleteOneRequest) returns (DeletedResponse);

  rpc DeletePosts(DeleteManyRequest) returns (DeletedResponse);

  rpc RestorePost(RestoreOneRequest) returns (RestoredResponse);

  rpc RestorePosts(RestoreManyRequest) returns (RestoredResponse);

  rpc PermanentlyDeletePost(PermanentlyDeleteOneRequest) returns (DeletedResponse);

  rpc PermanentlyDeletePosts(PermanentlyDeleteManyRequest) returns (DeletedResponse);
}

message UpdatePostRequest {
  string id = 1;
  optional string title = 2;
  optional string content = 3;
  optional bool is_published = 4;
  optional string topic_id = 5;
  string user_id = 6;
}

message PostAdminDetailsResponse {
  string id = 1;
  string title = 2;
  string slug = 3;
  string content = 4;
  SimpleTopicResponse topic = 5;
  optional bool is_published = 6;
  optional string published_at = 7;
  string created_at = 8;
  string updated_at = 9;
  BaseUserResponse created_by = 10;
  BaseUserResponse updated_by = 11;
}

message SimpleTopicResponse {
  string id = 1;
  string name = 2;
  optional bool is_deleted = 3;
}

message GetOneRequest {
  string id = 1;
}

message GetAllPostsAdminRequest {
  uint32 page = 1;
  uint32 limit = 2;
  string sort = 3;
  string order = 4;
  string search = 5;
  string topic_id = 6;
  optional bool is_published = 7;
}

message PostsAdminResponse {
  repeated PostAdminResponse posts = 1;
  PaginationMetaResponse meta = 2;
}

message PostAdminResponse {
  string id = 1;
  string title = 2;
  TopicResponse topic = 3;
  SimpleImageResponse thumbnail = 4;
}

message SimpleImageResponse {
  string id = 1;
  string url = 2;
}

message PaginationMetaResponse {
  uint32 page = 1;
  uint32 limit = 2;
  uint32 total = 3;
  uint32 total_pages = 4;
  optional bool has_prev = 5;
  optional bool has_next = 6;
}

message TopicResponse {
  string id = 1;
  string name = 2;
  string slug = 3;
}

message TopicsResponse {
  repeated TopicResponse topics = 1;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  bool is_published = 3;
  string topic_id = 4;
  string user_id = 5;
}

message RestoreManyRequest {
  repeated string ids = 1;
  string user_id = 2;
}

message RestoredResponse {
  bool success = 1;
}

message RestoreOneRequest {
  string id = 1;
  string user_id = 2;
}

message PermanentlyDeleteManyRequest {
  repeated string ids = 1;
}

message PermanentlyDeleteOneRequest {
  string id = 1;
}

message DeleteManyRequest {
  repeated string ids = 1;
  string user_id = 2;
}

message DeleteOneRequest {
  string id = 1;
  string user_id = 2;
}

message DeletedResponse {
  bool success = 1;
}

message UpdatedResponse {
  bool success = 1;
}

message UpdateTopicRequest {
  string id = 1;
  string name = 2;
  string slug = 3;
  string user_id = 4;
}

message TopicsAdminResponse {
  repeated TopicAdminResponse topics = 1;
}

message TopicAdminResponse {
  string id = 1;
  string name = 2;
  string slug = 3;
  string created_at = 4;
  string updated_at = 5;
  BaseUserResponse created_by = 6;
  BaseUserResponse updated_by = 7;
}

message BaseUserResponse {
  string id = 1;
  string username = 2;
  BaseProfileResponse profile = 3;
}

message BaseProfileResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
}

message GetAllRequest {}

message CreateTopicRequest {
  string name = 1;
  optional string slug = 2;
  string user_id = 3;
}

message CreatedResponse {
  string id = 1;
}